modification html amar

--- a/htmlactivité.html
+++ b/htmlactivité.html
@@ -14,7 +14,7 @@ Bonjour Sio1 / modification de Aymen
     </p>
     <table>
     <tr>
-    <th>entête 1</th>
+    <th>entête 1 / modification amar</th>
  <th>entête 2</th>
         </tr>
         <tr>
